[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Bruno Carvalho <96201019+brunobzs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.0.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
